# astrapi-core

./: .claude-memory.md  .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  INSTALL.md  README.md  _version_scheme.py  main.py  pyproject.toml  requirements.txt  ui.drawio
.github/: copilot-instructions.md
app/: config.py  config.yaml  navigation.yaml  settings.py
app/api/: __init__.py  fastapi_app.py
app/api/routers/: __init__.py  items.py
app/data/: hosts.yaml  scheduler_status.yaml  settings.yaml  tasks.yaml
app/modules/: _base.py
app/routes/: __init__.py  modals.py
astrapi/core/: navigation.yaml
astrapi_core/system/: activity_log.py  db.py  runner.py
astrapi_core/ui/: _base.py  app.py  controls.py  crud_blueprint.py  htmx_crud_router.py  icons.py  module_loader.py  module_registry.py  render.py  settings_registry.py  storage.py  store.py
core/: core.yaml  navigation.yaml
core/system/: version.py
core/templates/: _base.html  index.html
core/ui/: __init__.py  _base.py  app.py  crud_blueprint.py  crud_router.py  module_loader.py  module_registry.py  navigation.py  page_factory.py  schema_loader.py  settings_registry.py  storage.py  swagger_utils.py
dev_app/: config.yaml
dev_app/data/: app.db-shm  app.db-wal
docs/: ui-class-activity-log.md  ui-class-debian.md  ui-class-docker.md  ui-class-modules.md  ui-class-notify.md  ui-class-pakete.md  ui-class-remotes.md  ui-class-scheduler.md  ui-class-settings.md  ui-class-system.md  ui-layout-all-modules.md
tests/: conftest.py  test_hosts_toggle.py  test_version.py
(+206 files in other folders)
