[project]
name = "astrapi-core"
dynamic = ["version"]   # Version kommt aus Git

[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
include = ["astrapi*"]