[project]
name = "astrapi-core"
dynamic = ["version"]   # Version kommt aus Git

[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
include = ["astrapi_core*"]
[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]   # pycodestyle, pyflakes, isort, warnings
ignore = ["E501"]                # Zeilenlänge wird vom Formatter gesteuert

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
